# flourish

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  env.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bash_ai/: __init__.py  agents.py  cli.py  config.py  runner.py
bash_ai/agent/: __init__.py  agents.py
bash_ai/completions/: loader.py  registry.py
bash_ai/config/: __init__.py  config.py  config_manager.py
bash_ai/logging/: __init__.py  logger.py
bash_ai/plugins/: __init__.py  base.py  cd_completer.py  enhancers.py  zsh_bindings.py
bash_ai/runner/: __init__.py  runner.py
bash_ai/tools/: __init__.py  tools.py
bash_ai/ui/: __init__.py  banner.py  cli.py  tui.py
config/: commands.json  config.json
docs/: architecture.md  plugins.md  third-party-libraries.md
docs/llm/: README.md  ROADMAP.md  analysis-and-roadmap.md
flourish/agent/: __init__.py  agents.py
flourish/completions/: __init__.py  git.py  registry.py
flourish/config/: config.py  config_manager.py
flourish/logging/: __init__.py  logger.py
flourish/plugins/: __init__.py  cd_completer.py  enhancers.py
flourish/runner/: runner.py
flourish/tools/: __init__.py  base.py  registry.py  tools.py
flourish/tools/bash/: __init__.py  bash_tools.py  skill.py
flourish/tools/config/: __init__.py  config_tools.py  skill.py
flourish/tools/history/: __init__.py  history_tools.py  skill.py
flourish/tools/ros2/: __init__.py  ros2_tools.py  skill.py
flourish/tools/system/: skill.py  system_tools.py
flourish/tools/tool_manager/: __init__.py  skill.py  tool_manager_tools.py
scripts/: bash_integration.sh  setup.sh
tests/: __init__.py  test_banner.py  test_completions.py  test_config.py  test_config_manager.py  test_enhancers.py  test_logging.py  test_plugins.py  test_skills.py  test_tools.py
tests/unit/agent/: test_agents.py
tests/unit/config/: test_config.py  test_config_manager_plugins.py  test_config_manager_skills.py
tests/unit/logging/: test_logger.py
tests/unit/tools/: test_bash_tools.py  test_config_tools.py  test_history_tool_call_stats.py  test_ros2_tools.py  test_tools_init.py
tests/unit/ui/: __init__.py  test_cli.py
